--- a/app-cripto/src/pages/home/home.module.css
+++ b/app-cripto/src/pages/home/home.module.css
@@ -1,21 +1,174 @@
-.container{
-    margin: 0 14px;
+.container {
+  margin: 0 14px;
 }
 
-.form{
+.form {
+  width: 100%;
+  display: flex;
+  gap: 24px;
+
+  input {
     width: 100%;
+    height: 44px;
+    padding: 0 8px;
+    border-radius: 4px;
+    outline: none;
+  }
+
+  button {
+    background-color: transparent;
+  }
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 0 14px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+}
+
+table caption {
+  font-size: 16px;
+  margin: 0.5em 0 0.75em;
+}
+
+table th,
+table td {
+  padding: 14px;
+  text-align: center;
+}
+
+th {
+  color: #fff;
+}
+
+.tr {
+  background-color: #1d1c21;
+}
+
+td:first-child,
+th:first-child {
+  border-radius: 8px 0 0 8px;
+}
+
+td:last-child,
+th:last-child {
+  border-radius: 0 8px 8px 0;
+}
+
+td {
+  font-weight: bold;
+  font-size: 18px;
+  color: #fff;
+}
+
+.tdProfit {
+  color: #12f98a;
+  font-weight: bold;
+}
+.tdLoss {
+  font-weight: bold;
+  color: #f91257;
+}
+
+.btnMore {
+  background-color: #30beff;
+  padding: 8px 24px;
+  color: #fff;
+  border-radius: 8px;
+  margin: 14px 0;
+  transition: all 0.3s ease-in;
+
+  &:hover {
+    transform: scale(1.06);
+  }
+}
+
+.linkCoins {
+  transition: all 0.2s ease-out;
+
+  &:hover {
+    color: #9c9c9c;
+  }
+}
+
+.name {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo {
+  width: 20px;
+  height: 20px;
+  transition: all 1s;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.5);
+    z-index: 99;
+  }
+}
+
+/* RESPONSIVIDADE TABELA */
+
+@media screen and (max-width: 600px) {
+  .name {
     display: flex;
-    gap: 24px;
+  }
 
-    input{
-        width: 100%;
-        height: 44px;
-        padding: 0 8px;
-        border-radius: 4px;
-        outline: none;        
-    }
+  .name img {
+    margin-left: auto;
+  }
 
-    button{
-        background-color: transparent;
-    }
+  table {
+    border: 0;
+  }
+
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    position: absolute;
+    width: 1px;
+    padding: 0;
+  }
+
+  tr {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    margin-bottom: 14px;
+  }
+
+  table td {
+    border-bottom: 1px solid rgba(221, 221, 221, 0.17);
+    display: block;
+    text-align: right;
+    font-size: 14px;
+    font-weight: 400;
+  }
+
+  table td::before {
+    content: attr(data-Label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+
+  table td:last-child {
+    border-radius: 0;
+  }
+
+  td:first-child,
+  th:first-child {
+    border-radius: 0;
+  }
+
+  td:last-child,
+  th:last-child {
+    border-radius: 0;
+  }
 }
