--- a/app-cripto/src/index.css
+++ b/app-cripto/src/index.css
@@ -1,29 +1,29 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   outline: 0;
 }
 
-body{
+body {
   width: 100%;
-  background-color: #18171c;
+  background-color: #18171cef;
   max-width: 1080px;
   margin: 0 auto;
   font-family: sans-serif;
   font-size: 16;
 }
 
-button{
+button {
   cursor: pointer;
   border: 1px solid transparent;
 }
 
-a{
+a {
   text-decoration: none;
   color: #fff;
 }
 
-ul{
+ul {
   list-style: none;
 }
