--- a/app-cripto/src/pages/home/home.module.css
+++ b/app-cripto/src/pages/home/home.module.css
@@ -98,6 +98,7 @@ td {
   display: flex;
   align-items: center;
   gap: 10px;
+  justify-content: center;
 }
 
 .logo {
@@ -109,6 +110,14 @@ td {
     transform: scale(1.5);
     z-index: 99;
   }
+}
+
+.load {
+  display: flex;
+  width: 600px;
+  margin: 80px auto;
+  justify-content: center;
+  color: #fff;
 }
 
 /* RESPONSIVIDADE TABELA */
